# fastApiPoetry

./: .gitignore
app/: main.py  pyproject.toml
