[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nikitashakhov <supersoter@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "1.26.15"
sqlalchemy = ">=2.0.36,<2.1.0"
fastapi = ">=0.115.4,<0.116.0"
pydantic = ">=2.9.2,<2.10.0"
pydantic-settings = ">=2.6.1,<2.7.0"
alembic = ">=1.14.0,<1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
